2008-02-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_cancelAllJobs): New method.
	(Connection_getPrinterAttributes): Don't free name string before
	use.
	(Connection_getPrinterAttributes): Construct the URI in the
	correct buffer.
	(Connection_printTestPage): Avoid compiler warning.

2008-02-06  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): The
	printer-state-reasons attribute is always a list.

2008-02-04  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.34.

2008-02-04  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getNotifications): Pass through the
	sequence numbers.

2008-01-29  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Don't default to
	user guest.

2008-01-23  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.33.

2008-01-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_cancelJob): Revert back to using
	job-uri since it is a required attribute.

2008-01-02  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_setJobHoldUntil): Fixed typo
	(Ubuntu #179520).

2007-12-17  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.32.

2007-12-14  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Don't deallocate
	the Python objects that are our arguments.

2007-12-11  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (Option_getChoices): Don't leak Unicode objects.
	(Option_getChoices): Add 'marked' attribute, based on patch by
	Romain Jacquet.

2007-11-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (do_printer_request): Fixed debugging output.

2007-11-27  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_cancelJob): Use job-id instead of
	job-uri.
	(Connection_getPrinterAttributes): New uri keyword to allow
	non-CUPS URIs.

2007-11-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Fixed
	job-sheets-default tuple.
