@@ -1,3 +1,7 @@
+2008-02-19  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getJobAttributes): New method.
+
 2008-02-07  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_cancelAllJobs): New method.
